updated readme & images

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Maditation Tracker",
-  "name": "Maditaion Tracker App",
+  "name": "Maditaion Tracker",
   "icons": [
     {
       "src": "favicon.ico",
